--- a/service-areas.html
+++ b/service-areas.html
@@ -181,14 +181,12 @@
           </article>
         </div>
 
-        <div class="blog-note card subtle">
-          <h3>Want city-specific pages for stronger “site selection + city” SEO?</h3>
-          <p class="muted">
-            We can create dedicated pages for your highest-priority cities (example: Valparaiso, Merrillville, Michigan City, Chicago,
-            Naperville, Schaumburg). These tend to rank better than one giant list when each page includes unique local content and FAQs.
-          </p>
-          <a class="btn" href="index.html#contact">Request a briefing</a>
-        </div>
+       <div class="card subtle">
+  <p class="muted">
+    Urbivista supports market specific expansion planning with localized analysis, transparent scoring models, and executive ready deliverables.
+  </p>
+  <a class="btn btn-small" href="#contact">Request a Briefing</a>
+</div>
 
         <p style="margin-top: 18px;">
           <a class="muted" href="index.html">← Back to Home</a>
