--- a/about.html
+++ b/about.html
@@ -1,132 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Urbivista | About</title>
-  <meta name="description" content="Learn about the Urbivista team and our approach to defensible, data driven location intelligence." />
+  <meta name="description" content="Learn about the Urbivista leadership team and our approach to defensible, data driven location intelligence." />
   <link rel="canonical" href="https://www.urbivista.io/about.html" />
   <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
   <header class="site-header">
-    <div class="nav">
-      <a class="brand" href="index.html">
-        <img class="logo" src="Urbivista_Logo_FullColor.png" alt="Urbivista" />
-      </a>
+    <div class="container">
+      <div class="header-inner">
+        <a class="brand" href="index.html">
+          <img class="brand-logo" src="Urbivista_Logo_FullColor.png" alt="Urbivista" />
+        </a>
 
-      <nav class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="platform.html">Platform</a>
-        <a href="service-areas/index.html">Service Areas</a>
-        <a href="blog.html">Insights</a>
-        <a class="active" href="about.html">About</a>
-      </nav>
+        <nav class="nav-links" aria-label="Primary">
+          <a href="index.html">Home</a>
+          <a href="platform.html">Platform</a>
+          <a href="service-areas/index.html">Service Areas</a>
+          <a href="blog.html">Insights</a>
+          <a class="active" href="about.html">About</a>
+        </nav>
 
-      <a class="nav-cta" href="index.html#contact">Request a briefing</a>
+        <div class="cta-row">
+          <a class="btn btn-small" href="index.html#contact">Request a briefing</a>
 
-      <button class="nav-toggle" type="button" aria-label="Open menu" aria-expanded="false" aria-controls="mobileMenu">
-        <span></span><span></span><span></span>
-      </button>
+          <button class="nav-toggle" type="button" aria-label="Open menu" aria-expanded="false" aria-controls="mobileMenu">
+            <span class="nav-toggle-lines"></span>
+          </button>
+        </div>
+      </div>
     </div>
 
     <div id="mobileMenu" class="mobile-menu" hidden>
-      <a href="index.html">Home</a>
-      <a href="platform.html">Platform</a>
-      <a href="service-areas/index.html">Service Areas</a>
-      <a href="blog.html">Insights</a>
-      <a class="active" href="about.html">About</a>
-      <a class="mobile-cta" href="index.html#contact">Request a briefing</a>
+      <div class="container">
+        <div class="mobile-menu-inner">
+          <a class="mobile-link" href="index.html">Home</a>
+          <a class="mobile-link" href="platform.html">Platform</a>
+          <a class="mobile-link" href="service-areas/index.html">Service Areas</a>
+          <a class="mobile-link" href="blog.html">Insights</a>
+          <a class="mobile-link" href="about.html">About</a>
+          <a class="mobile-link" href="index.html#contact">Request a briefing</a>
+        </div>
+      </div>
     </div>
   </header>
 
-  <main class="page">
-    <section class="page-hero">
+  <main>
+    <section class="hero">
       <div class="container">
-        <h1>About Urbivista</h1>
-        <p class="subhead">
-          Urbivista was founded by professionals with complementary expertise in analytics, legal reasoning, and market strategy.
-          The company blends structured analytical methodology with real world business development experience to deliver defensible,
-          data driven location intelligence for enterprise decision makers.
-        </p>
-      </div>
-    </section>
+        <div class="hero-grid">
+          <div>
+            <p class="eyebrow">ABOUT</p>
+            <h1>About Urbivista</h1>
+            <p class="hero-sub">
+              Urbivista was founded by professionals with complementary expertise in analytics, legal reasoning, and market strategy.
+              The company blends structured analytical methodology with real world business development experience to deliver defensible,
+              data driven location intelligence for enterprise decision makers.
+            </p>
 
-    <section class="page-section">
-      <div class="container narrow">
-        <article class="profile">
-          <h2>Jon Schmaltz</h2>
-          <p class="profile-title">Founder and Head of Product and Strategy</p>
+            <div class="cta-row">
+              <a class="btn" href="index.html#contact">Request a briefing</a>
+              <a class="btn btn-ghost" href="platform.html">Explore the platform</a>
+            </div>
+          </div>
 
-          <p>
-            Jon founded Urbivista with a vision to bring structured analytical thinking and defensible decision frameworks to site selection
-            and market evaluation. With decades of experience as a business and real estate attorney, he contributes deep expertise in risk
-            assessment, regulatory awareness, and transaction level analysis.
-          </p>
+          <div class="card card-raised subtle">
+            <h2>Leadership</h2>
+            <p class="section-sub">
+              Complementary strengths across product strategy and growth execution.
+            </p>
 
-          <p>
-            His background advising companies across real estate, hospitality, and health care industries informs Urbivista’s emphasis on
-            compliance minded strategy and long term defensibility. Jon also serves on the board of the Valparaiso Economic Development Corporation,
-            providing regional perspective and insight that shape Urbivista’s analytical foundation.
-          </p>
-        </article>
-
-        <div class="divider"></div>
-
-        <article class="profile">
-          <h2>Luke Seifert</h2>
-          <p class="profile-title">Co Founder and Head of Growth and Operations</p>
-
-          <p>
-            Luke leads Urbivista’s client engagement, partnerships, and market expansion efforts. He brings a background in sales leadership,
-            project management, and business development, with experience guiding complex projects from concept through execution.
-          </p>
-
-          <p>
-            His professional focus centers on translating technical analysis into clear, actionable recommendations for organizations making
-            high impact location decisions. Luke works directly with clients to ensure Urbivista’s insights align with measurable business
-            outcomes and real world implementation.
-          </p>
-        </article>
-
-        <div class="about-cta">
-          <h3>Want to see Urbivista in action</h3>
-          <p>Request a briefing and we will walk through your use case and recommended next steps.</p>
-          <a class="button" href="index.html#contact">Request a briefing</a>
+            <ul class="checklist">
+              <li>Defensible decision frameworks</li>
+              <li>Clear assumptions and reporting</li>
+              <li>Client led implementation support</li>
+            </ul>
+          </div>
         </div>
       </div>
     </section>
-  </main>
 
-  <footer class="site-footer">
-    <div class="container footer-inner">
-      <div class="footer-left">
-        <img class="footer-logo" src="Urbivista_Logo_FullColor.png" alt="Urbivista" />
-        <p class="footer-note">Enterprise location intelligence for defensible site selection</p>
-      </div>
+    <section class="section section-alt">
+      <div class="container">
+        <div class="grid-2">
+          <div class="feature-card">
+            <div class="feature-content">
+              <div class="feature-top">
+                <h2>Jon Schmaltz</h2>
+                <span class="tag">Founder</span>
+              </div>
 
-      <div class="footer-right">
-        <a href="index.html">Home</a>
-        <a href="platform.html">Platform</a>
-        <a href="service-areas/index.html">Service Areas</a>
-        <a href="blog.html">Insights</a>
-        <a href="about.html">About</a>
-      </div>
-    </div>
-  </footer>
+              <p class="muted"><strong>Founder and Head of Product and Strategy</strong></p>
 
-  <script>
-    (function () {
-      var btn = document.querySelector(".nav-toggle");
-      var menu = document.getElementById("mobileMenu");
-      if (!btn || !menu) return;
-
-      btn.addEventListener("click", function () {
-        var isOpen = btn.getAttribute("aria-expanded") === "true";
-        btn.setAttribute("aria-expanded", String(!isOpen));
-        menu.hidden = isOpen;
-      });
-    })();
-  </script>
-</body>
-</html>
+              <p>
+                Jon founded Urbivista with a vision to bring structured analytical thinking and defensible decision frameworks to site selection
