--- a/about.html
+++ b/about.html
@@ -98,3 +98,91 @@
 
               <p>
                 Jon founded Urbivista with a vision to bring structured analytical thinking and defensible decision frameworks to site selection
+                and market evaluation. With decades of experience as a business and real estate attorney, he contributes deep expertise in risk
+                assessment, regulatory awareness, and transaction level analysis.
+              </p>
+
+              <p>
+                His background advising companies across real estate, hospitality, and health care industries informs Urbivista’s emphasis on
+                compliance minded strategy and long term defensibility. Jon also serves on the board of the Valparaiso Economic Development Corporation,
+                providing regional perspective and insight that shape Urbivista’s analytical foundation.
+              </p>
+            </div>
+          </div>
+
+          <div class="feature-card">
+            <div class="feature-content">
+              <div class="feature-top">
+                <h2>Luke Seifert</h2>
+                <span class="tag">Co Founder</span>
+              </div>
+
+              <p class="muted"><strong>Co Founder and Head of Growth and Operations</strong></p>
+
+              <p>
+                Luke leads Urbivista’s client engagement, partnerships, and market expansion efforts. He brings a background in sales leadership,
+                project management, and business development, with experience guiding complex projects from concept through execution.
+              </p>
+
+              <p>
+                His professional focus centers on translating technical analysis into clear, actionable recommendations for organizations making
+                high impact location decisions. Luke works directly with clients to ensure Urbivista’s insights align with measurable business
+                outcomes and real world implementation.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="section" style="padding-top: 28px; padding-bottom: 0;">
+          <div class="card cta-inner">
+            <div>
+              <h2 style="margin-bottom: 8px;">Want to see Urbivista in action</h2>
+              <p class="section-sub" style="margin: 0;">
+                Request a briefing and we will walk through your use case and recommended next steps.
+              </p>
+            </div>
+            <div class="cta-actions">
+              <a class="btn" href="index.html#contact">Request a briefing</a>
+              <a class="btn btn-ghost" href="service-areas/index.html">View service areas</a>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-inner">
+          <div style="display:flex; align-items:center; gap: 12px;">
+            <img src="Urbivista_Logo_FullColor.png" alt="Urbivista" style="height: 34px; width: auto; object-fit: contain;" />
+            <div class="muted" style="font-weight: 650;">Enterprise location intelligence for defensible site selection</div>
+          </div>
+
+          <div class="footer-links">
+            <a href="index.html">Home</a>
+            <a href="platform.html">Platform</a>
+            <a href="service-areas/index.html">Service Areas</a>
+            <a href="blog.html">Insights</a>
+            <a href="about.html">About</a>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </main>
+
+  <script>
+    (function () {
+      var btn = document.querySelector(".nav-toggle");
+      var menu = document.getElementById("mobileMenu");
+      if (!btn || !menu) return;
+
+      btn.addEventListener("click", function () {
+        var isOpen = btn.getAttribute("aria-expanded") === "true";
+        btn.setAttribute("aria-expanded", String(!isOpen));
+        menu.hidden = isOpen;
+      });
+    })();
+  </script>
+</body>
+</html>
