--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
           <a href="#platform">Platform</a>
           <a href="#product">Product</a>
           <a href="#solutions">Solutions</a>
+          <a href="about.html">About</a>
           <a href="service-areas.html">Service Areas</a>
           <a href="blog.html">Blog</a>
           <a class="btn btn-small" href="#contact">Contact</a>
@@ -120,6 +121,7 @@
         <a href="#platform" class="mobile-link">Platform</a>
         <a href="#product" class="mobile-link">Product</a>
         <a href="#solutions" class="mobile-link">Solutions</a>
+        <a href="about.html" class="mobile-link">About</a>
         <a href="service-areas.html" class="mobile-link">Service Areas</a>
         <a href="blog.html" class="mobile-link">Blog</a>
         <a href="#contact" class="btn btn-block">Contact</a>
@@ -318,6 +320,7 @@
     <div class="container footer-inner">
       <p class="muted">© <span id="year"></span> Urbivista. All rights reserved.</p>
       <div class="footer-links">
+        <a href="about.html">About</a>
         <a href="service-areas.html">Service Areas</a>
         <a href="blog.html">Blog</a>
         <a href="#contact">Contact</a>
